--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.9.6",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.24.3"
   },
   "devDependencies": {
     "@babel/core": "^7.26.9",
@@ -39,6 +40,7 @@
     "@types/swagger-ui-express": "^4.1.7",
     "babel-jest": "^29.7.0",
     "jest": "^29.7.0",
+    "mongodb-memory-server": "^10.1.4",
     "nodemon": "^3.1.9",
     "supertest": "^7.0.0",
     "ts-jest": "^29.2.5",
